--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-Django == 1.9.5
-django_material == 0.7.0
-material == 0.1
+Django==1.9.6
+django-material==0.7.0
+docopt==0.6.2
+mongodbforms==0.3
+mongoengine==0.10.6
+pep8==1.7.0
+pipreqs==0.4.2
+psycopg2==2.6.1
+pymongo==3.2.2
+requests==2.10.0
+yarg==0.1.9
